python client can be run but nothing happened